# lgr-auth-service

./: compose.yml
app-service/: Dockerfile
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: mod.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  mod.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
