[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
